--- a/src/components/styles/dark/cryptopage.css
+++ b/src/components/styles/dark/cryptopage.css
@@ -1,6 +1,6 @@
 .darkcryptoarea {
   background-color: aqua;
-  background-image: url('../../assets/bg.png');
+  background-image: url('../../assets/bggif.gif');
   color: #fff;
   background-size: cover;
   background-repeat: no-repeat;
