--- a/src/components/styles/dark/home.css
+++ b/src/components/styles/dark/home.css
@@ -1,7 +1,7 @@
 .darklandingarea {
   background-color: black;
   color: #fff;
-  background-image: url('./../../assets/bg.png');
+  background-image: url('./../../assets/bggif.gif');
 }
 
 .allstats {
