--- a/src/components/styles/light/cryptopage.css
+++ b/src/components/styles/light/cryptopage.css
@@ -1,6 +1,6 @@
 .lightcryptoarea {
   background-color: #ce4177;
-  background-image: url('../../assets/bg.png');
+  background-image: url('../../assets/bggif.gif');
   color: #fff;
   background-size: cover;
   background-repeat: no-repeat;
