Fix eslint warnings

--- a/src/components/styles/general/cryptolist.css
+++ b/src/components/styles/general/cryptolist.css
@@ -28,7 +28,7 @@
 
   .gotoArrow {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     width: 100%;
   }
 
@@ -67,7 +67,7 @@
 
   .gotoArrow {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     width: 100%;
   }
 
